2025-05-17T01:20:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15080173570 # 646
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-17
* notice: last 14d: unq all: 3 14
* notice: prev accum: outdated-unq outdated-all / unq all: 991 1471 / 1005 1485
* notice: next accum: outdated-unq outdated-all / unq all: 992 1472 / 1006 1486
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-05-03] / [2025-05-16]

2025-05-16T01:22:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15058530645 # 645
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-16
* notice: last 14d: unq all: 3 14
* notice: prev accum: outdated-unq outdated-all / unq all: 991 1471 / 1004 1484
* notice: next accum: outdated-unq outdated-all / unq all: 991 1471 / 1005 1485
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-05-15]

2025-05-15T01:19:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15034448980 # 644
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-15
* notice: last 14d: unq all: 2 13
* notice: prev accum: outdated-unq outdated-all / unq all: 990 1470 / 1001 1481
* notice: next accum: outdated-unq outdated-all / unq all: 991 1471 / 1004 1484
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-05-01] / [2025-05-14 2025-05-15]

2025-05-14T01:21:12Z: