@@ -1,12 +1,7 @@
 {
-  "count": 14,
+  "count": 13,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2025-05-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-05-05T00:00:00Z",
       "count": 1,
